// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node renders correctly: Default 1`] = `
.c0 {
  background-color: var(--color-pink500);
  border: 0.25rem solid transparent;
  border-radius: 0.5rem;
  height: 8rem;
  width: 8rem;
}

.c0[aria-current='true'] {
  border-color: var(--color-owlblue700);
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Node renders grabbed correctly: Grabbed 1`] = `
.c0 {
  background-color: var(--color-pink500);
  border: 0.25rem solid transparent;
  border-radius: 0.5rem;
  height: 8rem;
  width: 8rem;
}

.c0[aria-current='true'] {
  border-color: var(--color-owlblue700);
}

<div>
  <div
    aria-current="true"
    class="c0"
  />
</div>
`;
